syntax = "proto3";

package grpcservice;

option go_package = "grpcservice";

// Service A - Entry point service
service ServiceA {
  rpc Hello(HelloRequest) returns (HelloResponse);
  rpc Work(WorkRequest) returns (WorkResponse);
}

// Service B - Downstream service
service ServiceB {
  rpc Hello(HelloRequest) returns (HelloResponse);
  rpc Work(WorkRequest) returns (WorkResponse);
}

// Common request/response messages
message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
  string service = 2;
  int64 timestamp = 3;
}

message WorkRequest {
  string task = 1;
  int32 duration_ms = 2;
}

message WorkResponse {
  string message = 1;
  string service = 2;
  int32 processing_time_ms = 3;
  int64 timestamp = 4;
}
